# sdbmigrate

./: .gitignore  LICENSE  MAINTAINERS.md  README.md  pyproject.toml
.github/workflows/: pylint.yml
docs/: internals.md  sdbmigrate_auto.yaml.example  sdbmigrate_manual.yaml.example
src/: .gitignore  Makefile  pylint.rc  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
src/docker/: Dockerfile  Dockerfile.linters  Dockerfile.mysql  Dockerfile.postgres  run_tests_linters.sh  run_tests_mysql.sh  run_tests_postgres.sh
src/features/: 000_postgres_plain.feature  001_postgres_sharded.feature  002_postgres_python.feature  003_postgres_validation_negative.feature  004_postgres_real_cases.feature  005_postgres_dry_run.feature  006_postgres_env.feature  007_mysql_plain.feature  008_mysql_sharded.feature  009_mysql_python.feature  010_mysql_validation_negative.feature  011_mysql_real_cases.feature  012_mysql_dry_run.feature  013_mysql_env.feature  014_schema_override.feature  015_simple_config.feature  016_generate_action.feature  environment.py
src/features/configs/: mysql_auto.yaml  mysql_manual.yaml  mysql_simple.yaml  postgres_auto.yaml  postgres_manual.yaml  postgres_simple.yaml
src/features/steps/: common.py  config.py  database.py  migration.py  migration_checker.py  migration_dir.py  migraton_checker.py  run_sdbmigrate.py  sdbmigrate_state.py
