[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdbmigrate"
version = "1.0.3"
authors = [
  { name="Aliaksei Ramanau", email="drednout.by@gmail.com" },
  { name="Stanislav Ivankin", email="s_ivankin@wargaming.net"},
]
description = "DB migration tool for PostgreSQL/MySQL with sharding support"
readme = "README.md"
license = "see LICENCE file on https://github.com/wgnet/sdbmigrate/blob/main/LICENSE"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wgnet/sdbmigrate"
"Bug Tracker" = "https://github.com/wgnet/sdbmigrate/issues"
