[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdbmigrate"
version = "1.1.0"
authors = [
  { name="Aliaksei Ramanau", email="drednout.by@gmail.com" },
  { name="Stanislav Ivankin", email="s_ivankin@wargaming.net"},
]
description = "DB migration tool for PostgreSQL/MySQL with sharding support"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ['pyyaml', 'sqlparse >= 0.3.1']
optional-dependencies = {'postgres' = ['psycopg2 <= 2.8.6'], 'mysql' = ['mysqlclient']}

[project.urls]
"Homepage" = "https://github.com/wgnet/sdbmigrate"
"Bug Tracker" = "https://github.com/wgnet/sdbmigrate/issues"
