[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdbmigrate"
version = "1.1.3"
authors = [
  { name="Alex Ramanau", email="a.ramanau.pl@gmail.com" },
  { name="Stanislav Ivankin", email="s_ivankin@wargaming.net"},
]
description = "DB migration tool for PostgreSQL/MySQL with sharding support"
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ['pyyaml', 'sqlparse >= 0.3.1']
optional-dependencies = {'postgres' = ['psycopg2 >= 2.9.3'], 'mysql' = ['mysqlclient']}

[project.urls]
"Homepage" = "https://github.com/alex-ramanau/sdbmigrate"
"Bug Tracker" = "https://github.com/alex-ramanau/sdbmigrate/issues"
